fix: change image dimensions to px because of alignment issues

--- a/004-css/homework/assets/css/style.css
+++ b/004-css/homework/assets/css/style.css
@@ -71,7 +71,7 @@ header h1 {
 }
 
 .card-img {
-  width: 25%;
+  width: 75px;
   margin-right: 10px;
 }
 
@@ -95,7 +95,6 @@ header h1 {
 
 .profile {
   border-radius: 50%;
-  width: 75px;
   height: 75px;
   overflow: hidden;
 }
